--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            PICSL Computing Howto
 description:      How to use PICSL computing resources.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+url:              http://bkandel.github.io/PICSL_Howto/
 disqus_shortname: 
 
 # Owner/author information
