--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title:            PICSL Computing Howto
 description:      How to use PICSL computing resources.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://bkandel.github.io/PICSL_Howto/
+baseurl:          PICSL_Howto/
 disqus_shortname: 
 
 # Owner/author information
