--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ links:
     url: /cluster-usage/
   - title: Lab Software
     url: /lab-software/
+  - title: Lab Citizenship
+    url: /lab-citizenship/
   - title: PICSL Webpage
     url: http://www.picsl.upenn.edu
     external: true
