Renamed development page.

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ links:
     url: /cluster-usage/
   - title: Lab Citizenship
     url: /lab-citizenship/
-  - title: Development
-    url: /development/
+  - title: Research
+    url: /research/
   - title: Lab Software
     url: /lab-software/
   - title: PICSL Webpage
